db added in appdata and test cases added

--- a/WorkPlanningService/Web.config
+++ b/WorkPlanningService/Web.config
@@ -5,7 +5,9 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="constr" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=true;Initial Catalog=Worklog" providerName="System.Data.SqlClient" />
+		<!--<add name="constr" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=true;Initial Catalog=Worklog" providerName="System.Data.SqlClient" />-->
+	<!--<add name="constr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Integrated Security=True;Initial Catalog=Worklog" providerName="System.Data.SqlClient" />-->
+	<add name="constr" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=Worklog;Integrated Security=SSPI;AttachDBFilename=D:\Work Planning\WorkplanningWebAPI\WorkPlanningService\WorkPlanningService\App_Data\Worklog.mdf " />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
